--- a/doc/latex/pgfplots/pgfplots.libs.ternary.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.ternary.tex
@@ -192,7 +192,7 @@ contain any of the |mark|, |color| and |cycle list| options of a normal axis.
 
 \noindent The following example is a (crude) copy of an example of
 
-\url{http://www.sv.vt.edu/classes/MSE2094_NoteBook/96ClassProj/experimental/ternary2.html}
+\href{http://www.sv.vt.edu/classes/MSE2094_NoteBook/96ClassProj/experimental/ternary2.html}{ternary2.html} (sv.vt.edu)
 
 \noindent and uses |area style| to change |cycle list| and the legend
 appearance.
@@ -262,7 +262,7 @@ appearance.
 Ternary plots can also use |contour prepared| to plot contour lines.
 The following example is a (crude) copy of an example of
 
-\url{http://www.sv.vt.edu/classes/MSE2094_NoteBook/96ClassProj/experimental/ternary2.html}:
+\href{http://www.sv.vt.edu/classes/MSE2094_NoteBook/96ClassProj/experimental/ternary2.html}{ternary2.html} (sv.vt.edu):
 
 \begin{codeexample}[]
 \begin{tikzpicture}
