--- a/doc/latex/pgfplots/pgfplots.basic.reference.tex
+++ b/doc/latex/pgfplots/pgfplots.basic.reference.tex
@@ -88,7 +88,7 @@ All collected = \allcollected.
     The result no longer contains either |\i| or |\j| (since these have been
     expanded). Then, it invokes the resulting macro. Details about the \TeX{}
     command |\edef| and expansion control can be found in the document
-    \href{file:TeX-programming-notes.pdf}{TeX-programming-notes.pdf} which
+    \href{https://pgfplots.sourceforge.net/TeX-programming-notes.pdf}{TeX-programming-notes.pdf} which
     comes with \PGFPlots{}.
 \end{command}
 
