--- a/doc/latex/pgfplots/pgfplots.preliminaries.tex
+++ b/doc/latex/pgfplots/pgfplots.preliminaries.tex
@@ -17,7 +17,7 @@ simplify the work with \PGFPlots{}, although it is not required.
     \item the \PGFPlotstable{} component which simplifies number formatting
         and postprocessing of numerical tables. It comes as a separate
         package and has its own manual
-        \href{file:pgfplotstable.pdf}{pgfplotstable.pdf}.
+        \href{https://pgfplots.sourceforge.net/pgfplotstable.pdf}{pgfplotstable.pdf}.
 \end{enumerate}
 
 
@@ -306,7 +306,7 @@ project. We hope it is useful and provides valuable plots.
 
 If you are interested in writing something but don't know how, consider reading
 the auxiliary manual
-\href{file:TeX-programming-notes.pdf}{TeX-programming-notes.pdf} which comes
+\href{https://pgfplots.sourceforge.net/TeX-programming-notes.pdf}{TeX-programming-notes.pdf} which comes
 with \PGFPlots{}. It is far from complete, but maybe it is a good starting
 point (at least for more literature).
 
