link to github on title page

--- a/doc/latex/pgfplots/pgfplots.title_abstract_intro.tex
+++ b/doc/latex/pgfplots/pgfplots.title_abstract_intro.tex
@@ -11,7 +11,7 @@ and is produced using the \href{https://ctan.org/pkg/lwarp?lang=en}{\texttt{lwar
 \BlockClassSingle{manual-authorship-explanation}{%
 Author of the \PGFPlots{} manual: Dr. Christian Feuersänger.}
 \BlockClassSingle{manual-authorship-explanation}{%
-\href{http://sourceforge.net/projects/pgfplots}{http://sourceforge.net/projects/pgfplots}}
+\href{https://github.com/pgf-tikz/pgfplots}{https://github.com/pgf-tikz/pgfplots}}
 }
 
 \BlockClassSingle{abstract-block}{%
